Initial moment parsing

--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,7 @@
     "**/.*"
   ],
   "dependencies": {
-    "polymer": "Polymer/polymer#master"
+    "polymer": "Polymer/polymer#master",
+    "momentjs": "~2.6.0"
   }
 }
