Converting keywords from string to Array
Per http://bower.io/docs/creating-packages/#bowerjson

> "`keywords` _array_ of _string_: (recommended) helps make your package easier to discover"

--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "cw-moment",
   "description": "A Polymer wrapper for moment.js.",
-  "keywords": "polymer, web-components",
+  "keywords": ["polymer", "web-components"],
   "main": "cw-moment.html",
   "license": "MIT",
   "homepage": "https://github.com/cletusw/cw-moment/",
