--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,7 @@
     "**/.*"
   ],
   "dependencies": {
-    "polymer": "Polymer/polymer#master",
+    "polymer": "Polymer/polymer#0.5.6",
     "momentjs": "~2.6.0"
   }
 }
